--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native": "0.72.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.22.0"
+    "react-native-screens": "^3.22.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
